--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@ Delete
 <i className="fi-rr-trash"></i>
 
 Log Out
-<i className="fi-ss-sign-out"></i>
+<i className="fi fi-rr-exit"></i>
 
 Profile Settings
 <i className="fi-rr-settings-sliders"></i>
@@ -179,7 +179,7 @@ Notification Bell
 <i className="fi-rs-bell"></i>
 
 Close X
-<i className="fi-rs-cross"></i>
+<i className="fi fi-br-cross"></i>
 
 Plus
 <i className="fi-rr-plus-small"></i>
